package command;

/**
 * @author YangLiuQing
 * @date 2020/6/10 22:10
 * 接收者
 */
public class LightReceiver {

    public void open(){
        System.out.println("电灯打开了...");
    }

    public void close(){
        System.out.println("电灯关闭了...");
    }
}
